[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/elements/icon_category.gd" type="Script" id=1]
[ext_resource path="res://scripts/elements/common/action_button.gd" type="Script" id=2]
[ext_resource path="res://styles/fonts/body.tres" type="DynamicFont" id=3]
[ext_resource path="res://layout/elements/common/theme_overrider.tscn" type="PackedScene" id=4]
[ext_resource path="res://scripts/elements/data_view/collection_view_filler.gd" type="Script" id=5]
[ext_resource path="res://layout/elements/edit_entity_icon/icon_in_category.tscn" type="PackedScene" id=6]

[sub_resource type="StyleBoxEmpty" id=34]

[node name="icon_category" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="panel" type="Panel" parent="."]
margin_right = 720.0
margin_bottom = 72.0
rect_min_size = Vector2( 0, 72 )
mouse_filter = 2

[node name="line_edit" type="LineEdit" parent="panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 32.0
margin_right = -56.0
mouse_filter = 2
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
custom_styles/normal = SubResource( 34 )
text = "category"

[node name="theme_overrider" parent="panel/line_edit" instance=ExtResource( 4 )]
theme_class = "FlatLineEdit"

[node name="fold_button" type="ToolButton" parent="panel"]
margin_right = 720.0
margin_bottom = 64.0
mouse_filter = 1
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 0
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}
method_name = "_on_fold_category"

[node name="status" type="Label" parent="panel"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -72.0
text = "+"
align = 1
valign = 1

[node name="grid_container" type="GridContainer" parent="."]
margin_top = 84.0
margin_right = 720.0
margin_bottom = 84.0
columns = 7

[node name="collection_view_filler" type="Node" parent="grid_container"]
script = ExtResource( 5 )
collection_item = ExtResource( 6 )
